--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,8 @@ spring:
     active: kafkaAndRedisWithSpringBootAppProfile
   application:
     name: KafkaAndRedisWithSpringBootApplication
-  kafka:
-    bootstrap-servers: localhost:9092
+
+kafka:
+  bootstrap-servers: ${bootstrapServers}
+  topic:
+    spotify: ${spotifyTopic}
