feat: #4 Add kafka producer config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ kafka:
   bootstrap-servers: ${bootstrapServers}
   topic:
     spotify: ${spotifyTopic}
+
+server:
+  servlet:
+    context-path: /kafka_service
+  port: ${kafkaServiceAppPort}
