Add artist and playlist topics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ kafkaAndRedisWithSpringBootAppProfile=dev
 kafkaServiceAppPort=8080
 bootstrapServers=localhost:9092
 spotifyTopic=spotify
+artistTopic=artist
+playlistTopic=playlist
