feat: #74 Add genre consumer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ kafka:
     spotify: ${spotifyTopic}
     playlist: ${playlistTopic}
     artist: ${artistTopic}
+    genre: ${genreTopic}
 
 server:
   servlet:
