Add song service url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spotifyTopic=spotify
 artistTopic=artist
 playlistTopic=playlist
 genreTopic=genre
+songServiceBaseUrl=http://localhost:8082/song_service
