--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ kafka:
     playlist: ${playlistTopic}
     artist: ${artistTopic}
     genre: ${genreTopic}
+  service:
+    base-url: ${songServiceBaseUrl}
 
 server:
   servlet:
