--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spotifyTopic=spotify
 artistTopic=artist
 playlistTopic=playlist
 genreTopic=genre
+songTopic=song
 songServiceBaseUrl=http://localhost:8082/song_service
